@@ -140,7 +140,7 @@ reserved:	DBCS
 reserved:	DE
 # note: the following are part of the register DEBUG-ITEM,
 #       they are automatically unreserved if the register is
-#       created
+#       created, which happens on USE FOR DEBUGGING
 reserved:	DEBUG-CONTENTS
 reserved:	DEBUG-ITEM
 reserved:	DEBUG-LINE
